<resources>
    <string name="app_name">VpnBeast</string>
    <string name="title_activity_main">Main2Activity</string>
    <string name="title_location">Choose a country</string>
    <string name="title_subscription">Which subscription?</string>
    <string-array name="arrCountries">
        <item>Istanbul - Turkey</item>
        <item>Amsterdam - Netherlands</item>
        <item>Barcelona - Spain</item>
    </string-array>
    <string-array name="arrPackages">
        <item>Package-1</item>
        <item>Package-2</item>
        <item>Free</item>
    </string-array>
    <string name="prompt_signup">Which package do you want?</string>
    <string name="secret">Shared Secret:</string>
    <string name="connecting">VpnClient is connecting...</string>
    <string name="connected">VpnClient is connected!</string>
    <string name="disconnected">VpnClient is disconnected!</string>
    <string name="err_message">Something went wrong. Please try again.</string>
    <string name="title_err">Error</string>
    <string name="forget_pass">You have clicked to Forget Password link</string>
    <string name="welcome_msg">You have logged in successfully </string>
    <string name="title_activity_import">Import Activity</string>
    <string name="import_cert">Import</string>
    <string name="err_noprofile">There is no profile selected. Please select a profile first.</string>
    <string name="err_no_cert">There is no profile to connect. Please import first</string>
    <string name="submit_file">Submit Certificate</string>
    <string name="file_nothing_selected">No file selected</string>
    <string name="client_certificate_title">Certificate name</string>
    <string name="file_select">Select file</string>
    <string name="username">Username</string>
    <string name="state_user_vpn_permission">User Vpn Permission</string>
    <string name="err_launch">An error occured while launching profile. Please try with other profile</string>
    <string name="import_profile_done">Successfully imported profile</string>
    <string name="state_connecting_msg">Connecting...</string>
    <string name="state_already_connected_msg">There is a profile already connected. Please disconnect first</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="state_msg_connecting">Attempting to connect. Please wait about 5 seconds.</string>
    <string name="state_disconnecting">Disconnecting</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_msg_disconnecting">Attempting to disconnect. Please wait</string>
    <string name="state_msg_disconnected">\nYou have disconnected from profile. Starting previous activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_forget_pass">I forgot my password!</string>
    <string name="text_signup_now">Signup now!</string>
    <string name="text_clear">Clear</string>
    <string name="text_submit">Submit</string>
    <string name="text_remember_me">Remember my credidentals</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_error">Error</string>
    <string name="text_error_msg">An error occured. Please try again!</string>
    <string name="error_ondestroy_msg">Killing that activity will stop your current session. Are you sure?</string>
    <string name="err_stopvpn">Unable to stop vpn profile. Please do something else</string>
    <string name="msg_logout">Unable to get back activity. Please logout from right corner</string>
    <string name="error_no_profile">There is no profile to connect</string>
    <string name="profile_name">Enter profile name</string>
    <string name="text_profilename">Your profile: </string>
    <string name="text_logged_in">Logged in as: </string>
    <string name="text_ip_addr">Ip address: </string>
    <string name="text_ip_port">Port number: </string>
    <string name="err_read_folder">Error while reading folder. Cant read</string>
    <string name="location">Location</string>
    <string name="err_import_file">An error occured while importing data</string>
    <string name="import_profile">Converting configurations into Vpn Profile. Please wait</string>
    <string name="sending_email">Email is sending</string>
    <string name="title_importing">Importing Configurations</string>
    <string name="title_activity_status">Connection Status</string>
    <string name="sorting_profiles">Sorting Profiles</string>
    <string name="sorting_profiles_msg">Pinging each server to sort them by speed</string>
    <string name="state_user_vpn_password">Importing Configurations</string>
    <string name="state_unknown">Unknown State</string>
    <string name="state_user_vpn_password_cancelled">User cancelled password dialog</string>
    <string name="state_user_vpn_permission_cancelled">User cancelled permission</string>
    <string name="state_importing">Importing profile</string>
    <string name="state_disconnected_msg">You have successfully disconnected from profile</string>
    <string name="state_disconnecting_msg">Disconnecting from selected profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="state_error_occured">Error occured = </string>
    <string name="state_exception">Exception: </string>
    <string name="state_interrupted">Interrupted!</string>
    <string name="state_valid_member">You are already a valid member</string>
    <string name="state_sorted_profiles">Profiles sorted</string>
    <string name="state_waiting">Connecting</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="err_verification">For your first login, please check your email to verify your account</string>
    <string name="state_login_failed">Login failed because of connection problem</string>
    <string name="err_enter_mail">Please enter an email address</string>
    <string name="err_password">Password too short, enter minimum 6 characters!</string>
    <string name="err_password_not_same">Your passwords does not match. Please check!</string>
    <string name="err_email_format">Your email address format is wrong!</string>
    <string name="prompt_password_msg">Please enter password</string>
    <string name="err_activity_msg">An error occured and restarted activity</string>
    <string name="warning">Warning</string>
    <string name="warning_msg">Destroying that activity will kill your current VPN session. Are you sure?</string>
    <string name="prompt_logout">Log out</string>
    <string name="prompt_sort">Sort profiles</string>
    <string name="prompt_import">Import</string>
    <string name="prompt_success">Account successfully created</string>
    <string name="prompt_success_msg">Your account has successfully created. You need to verify your mail to login. Please check your email to verify your email</string>
    <string name="prompt_displayLocation">Display location: </string>
    <string name="state_displayLocation">Your location: </string>
    <string name="state_displayLocation_err">Could not get the location. Make sure location is enabled on the device</string>
    <string name="prompt_remove_profile">Remove</string>
    <string name="profile_removed">Profile removed</string>
    <string name="profile_removed_err">An error occured while removing profile. Please try again</string>
    <string name="err_profile_removed">There is no profile to remove</string>
    <string name="state_logged_in">User successfully logged in!</string>
    <string name="state_logged_updated">Updated!</string>
    <string name="err_state_logged_updated">Something went wrong while updating!</string>
    <string name="err_state_logged_in">Invalid username or password</string>
    <string name="err_state_json">Error Occured! Json response from server might be invalid</string>
    <string name="err_server_404">Requested resource not found</string>
    <string name="err_server_500">Something went wrong at server end</string>
    <string name="err_server_else">Unexpected Error occcured! Most common Error: Device might not be connected to Internet or remote server is not up and running</string>
    <string name="state_register">You are successfully registered! Enjoy!</string>
    <string name="err_state_register">User already registered!</string>
    <string name="err_state_blank_signup">Please fill all the fields to signup!</string>
    <string name="err_state_empty_fields">Please fill all the required fields!</string>
    <string name="state_member_insert">Member successfully inserted to DB</string>
    <string name="err_state_member_insert">An error occured while inserting to DB. Please try again.</string>
    <string name="text_email_sent">Sending email. Please hold</string>
    <string name="title_email">Email Sender</string>
    <string name="static_keys_info">For the static configuration the TLS Auth Keys will be used as static keys</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add Profile</string>
    <string name="add_profile_name_prompt">Enter a name identifying the new Profile</string>
    <string name="duplicate_profile_name">Please enter a unique Profile Name</string>
    <string name="profilename">Profile Name</string>
    <string name="no_keystore_cert_selected">You must select a User certificate</string>
    <string name="no_ca_cert_selected">You must select a CA certificate</string>
    <string name="no_error_found">No error found</string>
    <string name="config_error_found">Error in Configuration</string>
    <string name="ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="custom_route_format_error">Error parsing the custom routes</string>
    <string name="pw_query_hint">(leave empty to query on demand)</string>
    <string name="vpn_shortcut">OpenVPN Shortcut</string>
    <string name="vpn_launch_title">Connecting to VPN…</string>
    <string name="shortcut_profile_notfound">Profile specified in shortcut not found</string>
    <string name="random_host_prefix">Random Host Prefix</string>
    <string name="random_host_summary">Adds 6 random chars in front of hostname</string>
    <string name="custom_config_title">Enable Custom Options</string>
    <string name="custom_config_summary">Specify custom options. Use with care!</string>
    <string name="route_rejected">Route rejected by Android</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="cancel_connection_long">Disconnect VPN</string>
    <string name="clear_log">clear log</string>
    <string name="title_cancel">Cancel Confirmation</string>
    <string name="cancel_connection_query">Disconnect the connected VPN/cancel the connection attempt?</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="check_remote_tlscert">Checks whether the server uses a certificate with TLS Server extensions (--remote-cert-tls server)</string>
    <string name="clear">Clear</string>
    <string name="password">Password</string>
    <string name="save_password">Save Password</string>
    <string name="show_password">Show password</string>
    <string name="pw_request_dialog_prompt">\nPlease enter the username and password</string>
</resources>