<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/pnl_import"
    android:layout_height="wrap_content"
    android:layout_margin="8dip"
    android:gravity="center_vertical"
    tools:context="com.b.android.openvpn60.activity.ImportActivity">

    <Button
        android:id="@+id/file_select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#368e13"
        android:onClick="btnSelect_onClick"
        android:layout_alignParentRight="true"
        android:text="@string/file_select" />

    <Button
        android:id="@+id/file_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_toLeftOf="@id/file_select_button"
        android:text="@string/clear"/>

    <TextView
        android:id="@+id/file_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="#368e13"
        android:layout_toLeftOf="@+id/file_clear_button"
        android:text="@string/client_certificate_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/file_selected_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/file_title"
        android:layout_marginLeft="16dip"
        android:textColor="#368e13"
        android:layout_toLeftOf="@+id/file_clear_button"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/file_nothing_selected" />

    <TextView
        android:id="@+id/file_selected_description"
        android:layout_width="wrap_content"
        android:textIsSelectable="true"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#368e13"
        android:layout_below="@+id/file_selected_item"
        android:layout_marginLeft="16dip"
        android:layout_toLeftOf="@+id/file_select_button"
        android:ellipsize="end" />

    <LinearLayout
        android:id="@+id/impLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/file_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_file" >
        </Button>

    </LinearLayout>

</RelativeLayout>