<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.b.android.openvpn60.activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imgLogo"
        android:src="@drawable/logo_vpnbeast"
        android:layout_above="@id/grdLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:id="@+id/grdLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dip"
        android:layout_marginLeft="40dip"

        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtName"
            android:text="@string/text_logged_in"
            android:layout_column="0"
            android:layout_row="0"
            android:textStyle="bold"
            android:layout_marginRight="7dp"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/edtUser"
            android:textSize="15sp"
            android:layout_column="1"
            android:layout_row="0"
            android:textColor="@color/colorAccent"
            android:layout_gravity="fill_horizontal"
            android:editable="false"
            android:focusable="false"
            android:layout_marginLeft="7dp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtLocation"
            android:text="@string/text_profilename"
            android:layout_column="0"
            android:layout_row="1"
            android:textStyle="bold"
            android:layout_marginRight="7dp"
            />

        <Button
            android:id="@+id/btnSelect"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:background="@drawable/button_selector_select"
            android:text="Select"
            android:textStyle="bold"
            android:layout_marginLeft="7dp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtIp"
            android:text="@string/text_ip_addr"
            android:layout_column="0"
            android:layout_row="2"
            android:textStyle="bold"
            android:layout_marginRight="7dp"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/edtIP"
            android:textSize="15sp"
            android:layout_column="1"
            android:textColor="@color/colorAccent"
            android:layout_row="2"
            android:text="Not connected yet"
            android:layout_gravity="fill_horizontal"
            android:editable="false"
            android:focusable="false"
            android:layout_marginLeft="7dp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtPort"
            android:text="@string/text_ip_port"
            android:layout_column="0"
            android:layout_row="3"
            android:textStyle="bold"
            android:layout_marginRight="7dp"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/edtPort"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:layout_column="1"
            android:layout_row="3"
            android:text="Null"
            android:layout_gravity="fill_horizontal"
            android:editable="false"
            android:focusable="false"
            android:layout_marginLeft="7dp"
            />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:id="@+id/grdLayoutS"
        android:layout_marginRight="40dip"
        android:layout_marginLeft="40dip"

        android:layout_below="@+id/grdLayout"
        >


        <Button
            android:layout_height="75dip"
            android:layout_width="wrap_content"
            android:id="@+id/btnConnect"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="0.5"
            android:text="Connect"
            android:textColor="@color/colorBackground"
            android:layout_marginTop="20dip"
            android:layout_marginRight="10dp"
            />

    </GridLayout>

</RelativeLayout>
